manifests-failed/jenkins-operator-2.16.0-SNAPSHOT.9.tgz-manifest.yaml
---
# Source: jenkins-operator/templates/jenkins/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: jenkins
    helm.sh/chart: jenkins-operator-2.16.0-SNAPSHOT.9
    app.kubernetes.io/name: jenkins-operator
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "2.16.0-SNAPSHOT.9"
    app.kubernetes.io/managed-by: Helm
  name: jenkins
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: jnlp
      port: 50000
      protocol: TCP
      targetPort: 50000
  selector:
    app: jenkins
  sessionAffinity: None
  type: ClusterIP
---
# Source: jenkins-operator/templates/jenkins-operator/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    helm.sh/chart: jenkins-operator-2.16.0-SNAPSHOT.9
    app.kubernetes.io/name: jenkins-operator
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "2.16.0-SNAPSHOT.9"
    app.kubernetes.io/managed-by: Helm
  name: jenkins-operator
spec:
  replicas: 1
  selector:
    matchLabels:
      name: jenkins-operator
  template:
    metadata:
      labels:
        name: jenkins-operator
    spec:
      serviceAccountName: "edp-jenkins-operator"
      securityContext:
        runAsNonRoot: true
      containers:
        - name: jenkins-operator
          image: "epamedp/jenkins-operator:2.16.0-SNAPSHOT.9"
          imagePullPolicy: "IfNotPresent"
          command:
            - jenkins-operator
          securityContext:
            allowPrivilegeEscalation: false
          resources:
            limits:
              memory: 192Mi
            requests:
              cpu: 50m
              memory: 64Mi
---
# Source: jenkins-operator/templates/jenkins/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    app: jenkins
    helm.sh/chart: jenkins-operator-2.16.0-SNAPSHOT.9
    app.kubernetes.io/name: jenkins-operator
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "2.16.0-SNAPSHOT.9"
    app.kubernetes.io/managed-by: Helm
  name: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      volumes:
        - name: jenkins-jenkins-data
          persistentVolumeClaim:
            claimName: jenkins-data
      containers:
        - name: edp-jenkins
          image: epamedp/edp-jenkins:2.14.0-SNAPSHOT
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            limits:
              memory: 5Gi
            requests:
              cpu: 1000m
              memory: 1500Mi
          volumeMounts:
            - name: jenkins-jenkins-data
              mountPath: /var/lib/jenkins
          readinessProbe:
            httpGet:
              path: /login
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 60
            timeoutSeconds: 10
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          securityContext:
            runAsUser: 999
            runAsGroup: 998
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      serviceAccountName: jenkins
      serviceAccount: jenkins
      securityContext:
        runAsNonRoot: true
        fsGroup: 0
      schedulerName: default-scheduler
  strategy:
    type: Recreate
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
---
# Source: jenkins-operator/templates/jenkins/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: jenkins
  labels:
    app: jenkins
    helm.sh/chart: jenkins-operator-2.16.0-SNAPSHOT.9
    app.kubernetes.io/name: jenkins-operator
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "2.16.0-SNAPSHOT.9"
    app.kubernetes.io/managed-by: Helm
spec:
  rules:
    - host: jenkins-.%!s(<nil>)
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jenkins
                port: 
                  number: 8080
